style: Format files with black

--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -21,10 +21,10 @@
     "from sqlalchemy.engine import URL\n",
     "import os\n",
     "\n",
-    "HOST_IP = os.environ['DATABASE_IP']\n",
-    "DATABASE_USER = os.environ['DATABASE_USER']\n",
-    "DATABASE_PASSWORD = os.environ['DATABASE_PASSWORD']\n",
-    "DATABASE_PORT = os.environ['DATABASE_PORT']\n",
+    "HOST_IP = os.environ[\"DATABASE_IP\"]\n",
+    "DATABASE_USER = os.environ[\"DATABASE_USER\"]\n",
+    "DATABASE_PASSWORD = os.environ[\"DATABASE_PASSWORD\"]\n",
+    "DATABASE_PORT = os.environ[\"DATABASE_PORT\"]\n",
     "\n",
     "connection_url = URL.create(\n",
     "    \"postgresql+psycopg2\",\n",
@@ -32,7 +32,7 @@
     "    password=DATABASE_PASSWORD,\n",
     "    host=HOST_IP,\n",
     "    port=DATABASE_PORT,\n",
-    "    database=\"mimicllm\"\n",
+    "    database=\"mimicllm\",\n",
     ")"
    ],
    "metadata": {
@@ -55,13 +55,15 @@
     "\n",
     "Base = declarative_base()\n",
     "\n",
+    "\n",
     "class TokenizedData(Base):\n",
-    "    __tablename__ = 'tokenized_data'\n",
+    "    __tablename__ = \"tokenized_data\"\n",
     "    __table_args__ = {\"schema\": \"mimicllm\"}\n",
     "\n",
     "    token_id = Column(BigInteger, primary_key=True)\n",
     "    attention_mask = Column(Text)\n",
     "    input_ids = Column(Text)\n",
+    "\n",
     "\n",
     "# Replace with your database connection details\n",
     "engine = create_engine(connection_url)\n",
@@ -82,12 +84,12 @@
     "chunk_size = 1000\n",
     "test_size = 0.2\n",
     "\n",
-    "parquet_dir = 'data'\n",
+    "parquet_dir = \"data\"\n",
     "\n",
     "os.makedirs(parquet_dir, exist_ok=True)\n",
     "\n",
-    "train_parquet_file = os.path.join(parquet_dir, 'train.parquet')\n",
-    "test_parquet_file = os.path.join(parquet_dir, 'test.parquet')\n",
+    "train_parquet_file = os.path.join(parquet_dir, \"train.parquet\")\n",
+    "test_parquet_file = os.path.join(parquet_dir, \"test.parquet\")\n",
     "\n",
     "last_id = 0\n",
     "\n",
@@ -103,34 +105,43 @@
     "with tqdm(total=total_rows, desc=\"Processing\") as pbar:\n",
     "    while True:\n",
     "        # Query the database in chunks ordered by a unique column\n",
-    "        query = session.query(TokenizedData).order_by(TokenizedData.token_id).filter(TokenizedData.token_id > last_id).limit(chunk_size)\n",
+    "        query = (\n",
+    "            session.query(TokenizedData)\n",
+    "            .order_by(TokenizedData.token_id)\n",
+    "            .filter(TokenizedData.token_id > last_id)\n",
+    "            .limit(chunk_size)\n",
+    "        )\n",
     "        chunk = pd.read_sql(query.statement, session.bind)\n",
-    "    \n",
+    "\n",
     "        if chunk.empty:\n",
     "            break\n",
-    "            \n",
+    "\n",
     "        train_chunk, test_chunk = train_test_split(chunk, test_size=test_size)\n",
-    "    \n",
+    "\n",
     "        # Convert DataFrame to PyArrow Table\n",
     "        train_table = pa.Table.from_pandas(train_chunk, preserve_index=False)\n",
     "        test_table = pa.Table.from_pandas(test_chunk, preserve_index=False)\n",
-    "    \n",
+    "\n",
     "        # Write train chunk\n",
     "        if train_writer is None:\n",
-    "            train_writer = pq.ParquetWriter(train_parquet_file, train_table.schema, compression='snappy')\n",
+    "            train_writer = pq.ParquetWriter(\n",
+    "                train_parquet_file, train_table.schema, compression=\"snappy\"\n",
+    "            )\n",
     "        train_writer.write_table(train_table)\n",
-    "    \n",
+    "\n",
     "        # Write test chunk\n",
     "        if test_writer is None:\n",
-    "            test_writer = pq.ParquetWriter(test_parquet_file, test_table.schema, compression='snappy')\n",
-    "            \n",
+    "            test_writer = pq.ParquetWriter(\n",
+    "                test_parquet_file, test_table.schema, compression=\"snappy\"\n",
+    "            )\n",
+    "\n",
     "        test_writer.write_table(test_table)\n",
-    "    \n",
-    "        last_id = int(chunk['token_id'].iloc[-1])\n",
-    "        \n",
+    "\n",
+    "        last_id = int(chunk[\"token_id\"].iloc[-1])\n",
+    "\n",
     "        # Update progress bar\n",
     "        pbar.update(len(chunk))\n",
-    "        \n",
+    "\n",
     "        break\n",
     "\n",
     "# Close the Parquet writers\n",
