--- a/notebooks/fine_tune_model.ipynb
+++ b/notebooks/fine_tune_model.ipynb
@@ -13,11 +13,12 @@
     "tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True)\n",
     "tokenizer.add_special_tokens({\"pad_token\": \"[PAD]\"})\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_name,\n",
-    "                                             load_in_4bit=True,\n",
-    "                                             torch_dtype=torch.float16,\n",
-    "                                             device_map=\"auto\",\n",
-    "                                             )"
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_name,\n",
+    "    load_in_4bit=True,\n",
+    "    torch_dtype=torch.float16,\n",
+    "    device_map=\"auto\",\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
@@ -39,10 +40,10 @@
     "config = LoraConfig(\n",
     "    r=LORA_R,\n",
     "    lora_alpha=LORA_ALPHA,\n",
-    "    target_modules=[\"w1\", \"w2\", \"w3\"],  #just targetting the MoE layers.\n",
+    "    target_modules=[\"w1\", \"w2\", \"w3\"],  # just targetting the MoE layers.\n",
     "    lora_dropout=LORA_DROPOUT,\n",
     "    bias=\"none\",\n",
-    "    task_type=\"CAUSAL_LM\"\n",
+    "    task_type=\"CAUSAL_LM\",\n",
     ")\n",
     "\n",
     "model = get_peft_model(model, config)"
@@ -57,6 +58,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
+    "\n",
     "\n",
     "def pickle_to_tensor(x):\n",
     "    deserial = pickle.loads(bytes.fromhex(x.replace(\"\\\\x\", \"\")))\n",
@@ -75,10 +77,12 @@
     "from datasets import load_dataset\n",
     "import os\n",
     "\n",
-    "parquet_dir = 'data'\n",
-    "train_parquet_file = os.path.join(parquet_dir, 'train.parquet')\n",
+    "parquet_dir = \"data\"\n",
+    "train_parquet_file = os.path.join(parquet_dir, \"train.parquet\")\n",
     "\n",
-    "initial_dataset = load_dataset('parquet', data_files=train_parquet_file, streaming=True).remove_columns('token_id')"
+    "initial_dataset = load_dataset(\n",
+    "    \"parquet\", data_files=train_parquet_file, streaming=True\n",
+    ").remove_columns(\"token_id\")"
    ],
    "metadata": {
     "collapsed": false
@@ -91,10 +95,13 @@
    "outputs": [],
    "source": [
     "def transform(examples):\n",
-    "    examples['attention_mask'] = [pickle_to_tensor(x) for x in examples['attention_mask']]\n",
-    "    examples['input_ids'] = [pickle_to_tensor(x) for x in examples['input_ids']]\n",
-    "    \n",
+    "    examples[\"attention_mask\"] = [\n",
+    "        pickle_to_tensor(x) for x in examples[\"attention_mask\"]\n",
+    "    ]\n",
+    "    examples[\"input_ids\"] = [pickle_to_tensor(x) for x in examples[\"input_ids\"]]\n",
+    "\n",
     "    return examples\n",
+    "\n",
     "\n",
     "dataset = initial_dataset.map(transform, batched=True)"
    ],
@@ -123,14 +130,15 @@
    "source": [
     "from transformers import DataCollatorForLanguageModeling\n",
     "\n",
+    "\n",
     "class CustomDataCollator(DataCollatorForLanguageModeling):\n",
     "    def __call__(self, examples):\n",
-    "        batch = {'input_ids': [], 'attention_mask': []}\n",
+    "        batch = {\"input_ids\": [], \"attention_mask\": []}\n",
     "        for example in examples:\n",
-    "            batch['input_ids'].append(example['input_ids'][0])\n",
-    "            batch['attention_mask'].append(example['attention_mask'][0])\n",
-    "        batch = tokenizer.pad(batch, return_tensors='pt', padding='longest')\n",
-    "        \n",
+    "            batch[\"input_ids\"].append(example[\"input_ids\"][0])\n",
+    "            batch[\"attention_mask\"].append(example[\"attention_mask\"][0])\n",
+    "        batch = tokenizer.pad(batch, return_tensors=\"pt\", padding=\"longest\")\n",
+    "\n",
     "        return batch"
    ],
    "metadata": {
@@ -155,9 +163,9 @@
     "        learning_rate=1e-4,\n",
     "        logging_steps=2,\n",
     "        optim=\"adamw_torch\",\n",
-    "        output_dir=\"aidx-mixtral\"\n",
+    "        output_dir=\"aidx-mixtral\",\n",
     "    ),\n",
-    "    data_collator=data_collator\n",
+    "    data_collator=data_collator,\n",
     ")\n",
     "\n",
     "trainer.train()"
