--- a/notebooks/tokenizing.ipynb
+++ b/notebooks/tokenizing.ipynb
@@ -22,10 +22,10 @@
     "from sqlalchemy.engine import URL\n",
     "import os\n",
     "\n",
-    "HOST_IP = os.environ['DATABASE_IP']\n",
-    "DATABASE_USER = os.environ['DATABASE_USER']\n",
-    "DATABASE_PASSWORD = os.environ['DATABASE_PASSWORD']\n",
-    "DATABASE_PORT = os.environ['DATABASE_PORT']\n",
+    "HOST_IP = os.environ[\"DATABASE_IP\"]\n",
+    "DATABASE_USER = os.environ[\"DATABASE_USER\"]\n",
+    "DATABASE_PASSWORD = os.environ[\"DATABASE_PASSWORD\"]\n",
+    "DATABASE_PORT = os.environ[\"DATABASE_PORT\"]\n",
     "\n",
     "connection_url = URL.create(\n",
     "    \"postgresql+psycopg2\",\n",
@@ -33,7 +33,7 @@
     "    password=DATABASE_PASSWORD,\n",
     "    host=HOST_IP,\n",
     "    port=DATABASE_PORT,\n",
-    "    database=\"mimicllm\"\n",
+    "    database=\"mimicllm\",\n",
     ")\n",
     "\n",
     "engine = create_engine(connection_url)"
@@ -66,17 +66,15 @@
     "def tokenize(text):\n",
     "    return tokenizer(text, return_tensors=\"pt\")\n",
     "\n",
+    "\n",
     "def generate_prompt(system, input, output, separate=False):\n",
     "    # convert to instruction formatting\n",
     "    input_prompt = f\"<|im_start>system\\n{system}\\n<|im_end|>\\n<|im_start|>user\\n{input}\\n<|im_end|><|im_start|>assistant\\n\"\n",
     "    output_prompt = f\"{output}\\n<|im_end|></s>\"\n",
-    "    \n",
+    "\n",
     "    if separate:\n",
-    "        return {\n",
-    "            \"input\": input_prompt,\n",
-    "            \"output\": output_prompt\n",
-    "        }\n",
-    "    \n",
+    "        return {\"input\": input_prompt, \"output\": output_prompt}\n",
+    "\n",
     "    return input_prompt + output_prompt"
    ],
    "metadata": {
@@ -91,14 +89,17 @@
    "source": [
     "from sqlalchemy import text as sql_text\n",
     "\n",
+    "\n",
     "def format_batch_query(batch, start_at=0):\n",
-    "    return sql_text(f\"\"\"\n",
+    "    return sql_text(\n",
+    "        f\"\"\"\n",
     "    SELECT sample_id, input, output\n",
     "    FROM mimicllm.data\n",
     "    ORDER BY sample_id ASC\n",
     "    LIMIT {batch}\n",
     "    OFFSET {start_at}\n",
-    "    \"\"\")"
+    "    \"\"\"\n",
+    "    )"
    ],
    "metadata": {
     "collapsed": false
@@ -113,31 +114,38 @@
     "import pandas as pd\n",
     "from math import ceil\n",
     "\n",
+    "\n",
     "def get_batch(batch_size, start_at=0):\n",
     "    query = format_batch_query(batch_size, start_at)\n",
     "    df = pd.read_sql(query, engine)\n",
     "    return df\n",
     "\n",
+    "\n",
     "def generate_batches(batch_size):\n",
-    "    query = sql_text(\"\"\"\n",
+    "    query = sql_text(\n",
+    "        \"\"\"\n",
     "    SELECT COUNT(*)\n",
     "    FROM mimicllm.data\n",
-    "    \"\"\")\n",
+    "    \"\"\"\n",
+    "    )\n",
     "    df = pd.read_sql(query, engine)\n",
-    "    total = df.iloc[0]['count']\n",
+    "    total = df.iloc[0][\"count\"]\n",
     "    for i in range(0, total, batch_size):\n",
     "        yield get_batch(batch_size, i)\n",
-    "        \n",
+    "\n",
+    "\n",
     "def get_data(batch_size):\n",
     "    # get the total number of samples\n",
-    "    query = sql_text(\"\"\"\n",
+    "    query = sql_text(\n",
+    "        \"\"\"\n",
     "    SELECT COUNT(*)\n",
     "    FROM mimicllm.data\n",
-    "    \"\"\")\n",
+    "    \"\"\"\n",
+    "    )\n",
     "    df = pd.read_sql(query, engine)\n",
-    "    total = df.iloc[0]['count']\n",
-    "    \n",
-    "    return generate_batches(batch_size), ceil(total/batch_size)"
+    "    total = df.iloc[0][\"count\"]\n",
+    "\n",
+    "    return generate_batches(batch_size), ceil(total / batch_size)"
    ],
    "metadata": {
     "collapsed": false
@@ -150,13 +158,15 @@
    "outputs": [],
    "source": [
     "def get_all_sample_ids():\n",
-    "    query = sql_text(\"\"\"\n",
+    "    query = sql_text(\n",
+    "        \"\"\"\n",
     "    SELECT sample_id\n",
     "    FROM mimicllm.data\n",
     "    ORDER BY sample_id ASC\n",
-    "    \"\"\")\n",
+    "    \"\"\"\n",
+    "    )\n",
     "    df = pd.read_sql(query, engine)\n",
-    "    return df['sample_id'].tolist()"
+    "    return df[\"sample_id\"].tolist()"
    ],
    "metadata": {
     "collapsed": false
@@ -172,11 +182,12 @@
     "    \"\"\"Extract the base ID from the sample ID.\"\"\"\n",
     "    if sample_id.endswith(\"discharge\"):\n",
     "        return sample_id.replace(\"_discharge\", \"\")\n",
-    "    return '_'.join(sample_id.split('_')[:-1])\n",
+    "    return \"_\".join(sample_id.split(\"_\")[:-1])\n",
+    "\n",
     "\n",
     "def extract_numeric_id(sample_id):\n",
     "    \"\"\"Extract the numeric part of the sample ID.\"\"\"\n",
-    "    parts = sample_id.split('_')\n",
+    "    parts = sample_id.split(\"_\")\n",
     "    if parts[-1].isdigit():\n",
     "        return int(parts[-1])\n",
     "    return None  # For 'discharge' or other non-numeric parts"
@@ -274,33 +285,37 @@
     "for i, batch in enumerate(batch_iterator):\n",
     "    inner_bar.reset()\n",
     "    for index, row in batch.iterrows():\n",
-    "        base_id = extract_base_id(row['sample_id'])\n",
-    "        numeric_id = extract_numeric_id(row['sample_id'])\n",
+    "        base_id = extract_base_id(row[\"sample_id\"])\n",
+    "        numeric_id = extract_numeric_id(row[\"sample_id\"])\n",
     "        inner_bar.set_description(f\"Samples - {row['sample_id']}\")\n",
     "\n",
     "        # Skip logic for non-discharge samples\n",
     "        if base_id in last_skipped_id and numeric_id is not None:\n",
-    "            if numeric_id >= last_skipped_id[base_id] and not row['sample_id'].endswith(\"discharge\"):\n",
+    "            if numeric_id >= last_skipped_id[base_id] and not row[\"sample_id\"].endswith(\n",
+    "                \"discharge\"\n",
+    "            ):\n",
     "                continue\n",
-    "        \n",
-    "        prompt = generate_prompt(system_prompt, row['input'], row['output'])\n",
+    "\n",
+    "        prompt = generate_prompt(system_prompt, row[\"input\"], row[\"output\"])\n",
     "        tokenized = tokenize(prompt)\n",
-    "        \n",
+    "\n",
     "        inner_bar.set_postfix_str(f\"Length: {len(tokenized['input_ids'][0])}\")\n",
-    "        \n",
-    "        if len(tokenized['input_ids'][0]) > MAX_LENGTH:\n",
-    "            outer_bar.write(f\"Batch {i}: Sample {row['sample_id']} is too long, rest were skipped\")\n",
+    "\n",
+    "        if len(tokenized[\"input_ids\"][0]) > MAX_LENGTH:\n",
+    "            outer_bar.write(\n",
+    "                f\"Batch {i}: Sample {row['sample_id']} is too long, rest were skipped\"\n",
+    "            )\n",
     "            if numeric_id is not None:\n",
     "                last_skipped_id[base_id] = numeric_id\n",
     "        else:\n",
     "            tokenized_prompts.append(tokenized)\n",
-    "            \n",
-    "        inner_bar.update(1)    \n",
-    "    \n",
+    "\n",
+    "        inner_bar.update(1)\n",
+    "\n",
     "    outer_bar.update(1)\n",
-    "    \n",
+    "\n",
     "serialized_tokens = pd.DataFrame(tokenized_prompts).map(lambda x: pickle.dumps(x))\n",
-    "upload_to_db(serialized_tokens, engine, table=\"tokenized_data\")\n"
+    "upload_to_db(serialized_tokens, engine, table=\"tokenized_data\")"
    ],
    "metadata": {
     "collapsed": false
@@ -314,7 +329,18 @@
    "source": [
     "import time\n",
     "\n",
-    "batch_sizes = [10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000]  # Example batch sizes\n",
+    "batch_sizes = [\n",
+    "    10,\n",
+    "    20,\n",
+    "    50,\n",
+    "    100,\n",
+    "    200,\n",
+    "    500,\n",
+    "    1000,\n",
+    "    2000,\n",
+    "    5000,\n",
+    "    10000,\n",
+    "]  # Example batch sizes\n",
     "query_times = []\n",
     "\n",
     "for batch_size in batch_sizes:\n",
@@ -322,7 +348,7 @@
     "    _ = get_batch(batch_size)  # Assuming get_batch is your function to fetch data\n",
     "    end_time = time.time()\n",
     "    query_times.append(end_time - start_time)\n",
-    "    \n",
+    "\n",
     "query_times"
    ],
    "metadata": {
@@ -360,15 +386,15 @@
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(batch_sizes, query_times, label='Query Time')\n",
-    "plt.xlabel('Batch Size')\n",
-    "plt.ylabel('Time (seconds)')\n",
+    "plt.plot(batch_sizes, query_times, label=\"Query Time\")\n",
+    "plt.xlabel(\"Batch Size\")\n",
+    "plt.ylabel(\"Time (seconds)\")\n",
     "plt.legend()\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.plot(batch_sizes, memory_usages, label='Memory Usage')\n",
-    "plt.xlabel('Batch Size')\n",
-    "plt.ylabel('Memory Usage (bytes)')\n",
+    "plt.plot(batch_sizes, memory_usages, label=\"Memory Usage\")\n",
+    "plt.xlabel(\"Batch Size\")\n",
+    "plt.ylabel(\"Memory Usage (bytes)\")\n",
     "plt.legend()\n",
     "\n",
     "plt.show()"
@@ -384,18 +410,17 @@
    "outputs": [],
    "source": [
     "def best_fit(X, Y):\n",
+    "    xbar = sum(X) / len(X)\n",
+    "    ybar = sum(Y) / len(Y)\n",
+    "    n = len(X)  # or len(Y)\n",
     "\n",
-    "    xbar = sum(X)/len(X)\n",
-    "    ybar = sum(Y)/len(Y)\n",
-    "    n = len(X) # or len(Y)\n",
-    "\n",
-    "    numer = sum([xi*yi for xi,yi in zip(X, Y)]) - n * xbar * ybar\n",
+    "    numer = sum([xi * yi for xi, yi in zip(X, Y)]) - n * xbar * ybar\n",
     "    denum = sum([xi**2 for xi in X]) - n * xbar**2\n",
     "\n",
     "    b = numer / denum\n",
     "    a = ybar - b * xbar\n",
     "\n",
-    "    print('best fit line:\\ny = {:.2f} + {:.2f}x'.format(a, b))\n",
+    "    print(\"best fit line:\\ny = {:.2f} + {:.2f}x\".format(a, b))\n",
     "\n",
     "    return a, b"
    ],
