--- a/notebooks/fine_tune_model.ipynb
+++ b/notebooks/fine_tune_model.ipynb
@@ -174,6 +174,67 @@
     "collapsed": false
    },
    "id": "910576f5dd6bfbfc"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from evaluate import load\n",
+    "\n",
+    "bertscore = load(\"bertscore\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-22T00:02:04.555332Z",
+     "start_time": "2024-01-22T00:01:57.550549Z"
+    }
+   },
+   "id": "d550184aaacea731",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'precision': [0.56596839427948],\n 'recall': [0.5439147353172302],\n 'f1': [0.5547224879264832],\n 'hashcode': 'nfliu/scibert_basevocab_uncased_L9_no-idf_version=0.3.12(hug_trans=4.36.2)'}"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bertscore.compute(predictions=['hello world'], references=['hi there!'], model_type='nfliu/scibert_basevocab_uncased')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-22T00:16:41.309930Z",
+     "start_time": "2024-01-22T00:16:40.007226Z"
+    }
+   },
+   "id": "9996e4d9dc7b9482",
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "294e62a8029f8d8c"
   }
  ],
  "metadata": {
