--- a/notebooks/fine_tune_model.ipynb
+++ b/notebooks/fine_tune_model.ipynb
@@ -215,7 +215,11 @@
     }
    ],
    "source": [
-    "bertscore.compute(predictions=['hello world'], references=['hi there!'], model_type='nfliu/scibert_basevocab_uncased')"
+    "bertscore.compute(\n",
+    "    predictions=[\"hello world\"],\n",
+    "    references=[\"hi there!\"],\n",
+    "    model_type=\"nfliu/scibert_basevocab_uncased\",\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
