feat: Update parquet_dir in accelerate_multigpu notebook (main)
- Updated the value of `parquet_dir` variable in the `main()` function
  from '/workspace/data' to '/workspace/data/parquet'.
- This change is necessary to ensure that the correct directory is used
  for loading data in the notebook.

--- a/notebooks/accelerate_multigpu.ipynb
+++ b/notebooks/accelerate_multigpu.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    parquet_dir = '/workspace/data'\n",
+    "    parquet_dir = '/workspace/data/parquet'\n",
     "    stream_data = False\n",
     "    base_model_id = 'mistralai/Mixtral-8x7B-Instruct-v0.1'\n",
     "    \n",
@@ -46,7 +46,7 @@
     "    accelerator.print(\"Done loading data...\")\n",
     "    \n",
     "    accelerator.print(\"Loading compute_bertscore...\")\n",
-    "    # compute_bertscore = load_bertscore()\n",
+    "    compute_bertscore = load_bertscore()\n",
     "    accelerator.print(\"Done loading compute_bertscore...\")\n",
     "\n",
     "    # x = train_data.select(range(100))\n",
@@ -62,7 +62,7 @@
     "    accelerator.print(\"Loading model trainer...\")\n",
     "    trainer = load_model_trainer(\n",
     "            base_model_id,\n",
-    "            False,\n",
+    "            compute_bertscore,\n",
     "            data_collator,\n",
     "            train_data,\n",
     "            val_data,\n",
@@ -73,7 +73,9 @@
     "    \n",
     "    print_gpu_utilization(accelerator)\n",
     "\n",
-    "    train_result = trainer.train()"
+    "    # train_result = trainer.train()\n",
+    "\n",
+    "main()"
    ]
   },
   {
